# dioxus-resize-observer

./: Cargo.toml
src/: lib.rs
