[package]
name = "dioxus-resize-observer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Resize observer hooks for Dioxus."

[dependencies]
dioxus = { version = "0.4" }
dioxus-signals = { version = "0.4" }
dioxus-web = { version = "0.4" }
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["ResizeObserver", "ResizeObserverEntry"] }
dioxus-use-mounted= { git = "https://github.com/adlrwbr/dioxus-use-mounted/", branch = "dioxus-0.4" }
